# verra-scaper

./: .gitignore  README.md  Taskfile.yml  clean_data.py  pyproject.toml
data/: allprojects.xlsx  registered.xlsx
src/: conf_mgr.py  main.py
web-scraper/: clean_data.py  pyproject.toml  test.ipynb
web-scraper/setup/: Taskfile.yml  requirements.txt  requirements_develop.txt
web-scraper/src/: conf_mgr.py  main.py
